Revert image paths and adjust modal styles
Revert background image paths and modal image paths to their original state. Adjust modal heading and overlay styles.

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
   }
 
   .pc{ display:block; }
-  .pc::before{ background-image:url('pc/bg.png'); background-position:center top -8%; } /* CHANGED */
-  .pc::after { background-image:url('pc/overlay.png'); background-position:center top -8%; } /* CHANGED */
+  .pc::before{ background-image:url('/pc/bg.png'); background-position:center top -8%; } /* CHANGED BACK */
+  .pc::after { background-image:url('/pc/overlay.png'); background-position:center top -8%; } /* CHANGED BACK */
 
   .mobile{ display:none; }
-  .mobile::before{ background-image:url('mobile/bg.png'); } /* CHANGED */
-  .mobile::after { background-image:url('mobile/overlay.png'); } /* CHANGED */
+  .mobile::before{ background-image:url('/mobile/bg.png'); } /* CHANGED BACK */
+  .mobile::after { background-image:url('/mobile/overlay.png'); } /* CHANGED BACK */
 
   @media (max-width:800px){
   	.pc{ display:none; } .mobile{ display:block; }
@@ -78,41 +78,38 @@
 
   .modal-sheet {
   	position:relative;
-  	/* width and max-width should be controlled by newsletter.png dimensions */
   	width: auto;
   	max-width: none;
   	height: auto;
   	max-height: 82vh;
-  	border-radius:12px; /* Keep if newsletter.png has rounded corners */
+  	border-radius:12px;
   	overflow:hidden;
   	box-shadow: 0 20px 60px rgba(0,0,0,.6);
-  	background: transparent; /* Changed to transparent */
+  	background: transparent;
   }
 
-  /* show pc image by default, hide mobile; swapped by media query */
   .modal-art { display:block; width:100%; height:auto; pointer-events:none; user-select:none; }
   .modal-art.mobile-only { display:none; }
 
-  /* overlay text area on top of image */
   .modal-overlay {
   	position:absolute;
   	left:0; right:0;
-  	bottom:12px; /* Adjust this to sit on your newsletter.png */
-  	padding:18px; /* Adjust this */
+  	bottom:12px;
+  	padding:18px;
   	display:flex;
   	gap:8px;
   	align-items:center;
   	justify-content:center;
   	z-index:3;
   	pointer-events:auto;
-  	width: 100%; /* Ensure it spans the full width of the modal-art */
-  	box-sizing: border-box; /* Include padding in width */
+  	width: 100%;
+  	box-sizing: border-box;
   }
 
   .modal-heading {
   	position:absolute;
-  	left:20px; /* Adjust this to sit on your newsletter.png */
-  	top:20px; /* Adjust this to sit on your newsletter.png */
+  	left:20px;
+  	top:20px;
   	z-index:4;
   	font-family:Helvetica, Arial, sans-serif;
   	font-weight:700;
@@ -120,9 +117,9 @@
   	color:#fff;
   	text-shadow:0 2px 6px rgba(0,0,0,.6);
   	pointer-events:none;
-  	width: 100%; /* Ensure it spans the full width of the modal-art */
-  	box-sizing: border-box; /* Include padding in width */
-  	text-align: center; /* Center the text if needed */
+  	width: 100%;
+  	box-sizing: border-box;
+  	text-align: center;
   }
 
   .modal-input {
@@ -145,8 +142,8 @@
 
   .modal-close {
   	position:absolute;
-  	right:12px; /* Adjust this to sit on your newsletter.png */
-  	top:12px; /* Adjust this to sit on your newsletter.png */
+  	right:12px;
+  	top:12px;
   	z-index:5;
   	width:36px;
   	height:36px;
@@ -159,27 +156,25 @@
   	line-height:1;
   }
 
-  /* mobile art visible under 800px */
   @media (max-width:800px){
   	.modal-art { display:none; }
   	.modal-art.mobile-only { display:block; width:100%; height:auto; }
-  	.modal-heading { left:14px; top:12px; font-size:1.05rem; } /* Adjust these */
-  	.modal-overlay { padding:12px; bottom:10px; } /* Adjust these */
+  	.modal-heading { left:14px; top:12px; font-size:1.05rem; }
+  	.modal-overlay { padding:12px; bottom:10px; }
   }
 
   /* Specific slot positioning for PC scene (adjust these values!) */
-  .pc .slot-1 .sticker { --t: 10%; --l: 12%; --w: 18%; --h: 12%; } /* Example: Top Left Poster 1 */
-  .pc .slot-2 .sticker { --t: 10%; --l: 30%; --w: 25%; --h: 12%; } /* Example: Top Left Poster 2 */
-  .pc .slot-3 .sticker { --t: 10%; --l: 58%; --w: 22%; --h: 12%; } /* Example: Top Right Poster 3 */
-  .pc .slot-4 .sticker { --t: 40%; --l: 12%; --w: 18%; --h: 20%; } /* Example: Middle Left Poster 4 */
-  .pc .slot-5 .sticker { --t: 40%; --l: 60%; --w: 18%; --h: 20%; } /* Example: Middle Right Poster 5 */
-  /* Note: Slot 6 and 7 are not explicitly shown in your greenscreen image, assuming they're handled differently or positioned off-screen. */
+  .pc .slot-1 .sticker { --t: 10%; --l: 12%; --w: 18%; --h: 12%; }
+  .pc .slot-2 .sticker { --t: 10%; --l: 30%; --w: 25%; --h: 12%; }
+  .pc .slot-3 .sticker { --t: 10%; --l: 58%; --w: 22%; --h: 12%; }
+  .pc .slot-4 .sticker { --t: 40%; --l: 12%; --w: 18%; --h: 20%; }
+  .pc .slot-5 .sticker { --t: 40%; --l: 60%; --w: 18%; --h: 20%; }
 
   /* Specific slot positioning for Mobile scene (adjust these values!) */
-  .mobile .slot-1 .sticker { --t: 10%; --l: 10%; --w: 20%; --h: 10%; } /* Example mobile positioning */
+  .mobile .slot-1 .sticker { --t: 10%; --l: 10%; --w: 20%; --h: 10%; }
   .mobile .slot-2 .sticker { --t: 10%; --l: 35%; --w: 30%; --h: 10%; }
   .mobile .slot-3 .sticker { --t: 10%; --l: 70%; --w: 20%; --h: 10%; }
-section .mobile .slot-4 .sticker { --t: 40%; --l: 10%; --w: 20%; --h: 15%; }
+  .mobile .slot-4 .sticker { --t: 40%; --l: 10%; --w: 20%; --h: 15%; }
   .mobile .slot-5 .sticker { --t: 40%; --l: 70%; --w: 20%; --h: 15%; }
 
 </style>
@@ -189,64 +184,49 @@ section .mobile .slot-4 .sticker { --t: 40%; --l: 10%; --w: 20%; --h: 15%; }
 <section class="scene pc" aria-label="Desktop scene">
   <div class="lights" aria-hidden="true"></div>
 
-  
   <div class="slot slot-1" data-slot="#1">
   	<a class="sticker" href="#" aria-label="Link 1"></a> 
   </div>
-
   <div class="slot slot-2" data-slot="#2">
   	<a class="sticker" href="/posts.html" aria-label="Link 2"></a> 
   </div>
-
   <div class="slot slot-3" data-slot="#3">
   	<a class="sticker" href="#" aria-label="Link 3"></a> 
   </div>
-
   <div class="slot slot-4" data-slot="#4">
   	<a class="sticker" href="#" aria-label="Link 4"></a> 
   </div>
-
   <div class="slot slot-5" data-slot="#5">
   	<a class="sticker" href="#" aria-label="Link 5"></a> 
   </div>
-
   <div class="slot slot-6" data-slot="#buy">
   	<a class="sticker" href="#" target="_blank" rel="noopener" aria-label="Buy"></a> 
   </div>
-
   <div class="slot slot-7" data-slot="#download">
   	<a class="sticker" href="/ktm.pdf" download aria-label="Download PDF"></a> 
   </div>
 </section>
 
-<section classs="scene mobile" aria-label="Mobile scene">
-  <div class="lights" aria-hidden="true"></div>
-
+<section class="scene mobile" aria-label="Mobile scene">   <div class="lights" aria-hidden="true"></div>
   
   <div class="slot slot-1" data-slot="#1">
   	<a class="sticker" href="#" aria-label="Mobile Link 1"></a>
   </div>
-
   <div class="slot slot-2" data-slot="#2">
   	<a class="sticker" href="/posts.html" aria-label="Mobile Link 2"></a>
   </div>
-
   <div class="slot slot-3" data-slot="#3">
   	<a class="sticker" href="#" aria-label="Mobile Link 3"></a>
   </div>
-
   <div class="slot slot-4" data-slot="#4">
   	<a class="sticker" href="#" aria-label="Mobile Link 4"></a>
   </div>
-
   <div class="slot slot-5" data-slot="#5">
   	<a class="sticker" href="#" aria-label="Mobile Link 5"></a>
   </div>
-
   <div class="slot slot-6" data-slot="#buy">
   	<a class="sticker" href="#" target="_blank" rel="noopener" aria-label="Buy"></a>
   </div>
-
   <div class="slot slot-7" data-slot="#download">
   	<a class="sticker" href="/ktm.pdf" download aria-label="Download PDF"></a>
   </div>
@@ -260,10 +240,8 @@ section .mobile .slot-4 .sticker { --t: 40%; --l: 10%; --w: 20%; --h: 15%; }
 
 <div id="newsletter-modal" class="modal-backdrop" role="dialog" aria-modal="true" aria-hidden="true">
   <div class="modal-sheet" role="document" aria-labelledby="newsletter-heading">
-  	  	<img src="pc/newsletter.png" alt="" class="modal-art pc-only" />   	  	<img src="mobile/newsletter.png" alt="" class="modal-art mobile-only" />   	  	<div id="newsletter-heading" class="modal-heading">Subscribe to my newsletter</div>
-
+  	  	<img src="/pc/newsletter.png" alt="" class="modal-art pc-only" />   	  	<img src="/mobile/newsletter.png" alt="" class="modal-art mobile-only" />   	  	<div id="newsletter-heading" class="modal-heading">Subscribe to my newsletter</div>
   	  	<button id="newsletter-close" class="modal-close" aria-label="Close">×</button>
-
   	  	<div class="modal-overlay">
   	 	<form id="newsletter-form-inline" style="display:flex;gap:8px;width:100%;align-items:center;">
   	 	 	<label for="newsletter-email" style="position:absolute;left:-9999px">Email</label>
@@ -332,17 +310,17 @@ section .mobile .slot-4 .sticker { --t: 40%; --l: 10%; --w: 20%; --h: 15%; }
   async function initFor(kind){
   	const sceneEl = document.querySelector(\`.\${kind}\`);
   	if(!sceneEl) return;
-  	const gifPath = \`\${kind}/lights.gif\`; /* CHANGED */
+  	const gifPath = \`/\${kind}/lights.gif\`; /* CHANGED BACK */
   	const gifOk = await tryUseGif(sceneEl, gifPath);
   	if(gifOk) return;
-  	const frames = buildFrameList(\`\${kind}/lights\`); /* CHANGED */
+  	const frames = buildFrameList(\`/\${kind}/lights\`); /* CHANGED BACK */
   	const results = await preloadFrames(frames);
   	const ok = results.filter(r=>r.ok).map(r=>r.u);
   	if(ok.length) startSequence(sceneEl, ok, FPS);
   	else {
   	 	const layer = sceneEl.querySelector('.lights');
   	 	if(layer) layer.style.display = 'none';
-  	}
+s 	}
   }
 
   initFor('pc');
@@ -354,16 +332,15 @@ section .mobile .slot-4 .sticker { --t: 40%; --l: 10%; --w: 20%; --h: 15%; }
   const modal = document.getElementById('newsletter-modal');
   const open = document.getElementById('newsletter-open');
   const closeBtn = document.getElementById('newsletter-close');
-s const form = document.getElementById('newsletter-form-inline');
+  const form = document.getElementById('newsletter-form-inline');
   const input = document.getElementById('newsletter-email');
 
   function showModal(){
   	modal.style.display = 'flex';
   	modal.setAttribute('aria-hidden','false');
-  	// focus input after a tiny delay so keyboard works on mobile
   	setTimeout(()=> input.focus(), 120);
   }
-s function hideModal(){
+  function hideModal(){
   	modal.style.display = 'none';
   	modal.setAttribute('aria-hidden','true');
   }
@@ -377,11 +354,11 @@ s function hideModal(){
   // Local storage fallback and server POST try
   const LOCAL_KEY = 'newsletter_emails_v1';
   function loadList(){ try{ return JSON.parse(localStorage.getItem(LOCAL_KEY) || '[]'); }catch{ return []; } }
-s function saveList(list){ localStorage.setItem(LOCAL_KEY, JSON.stringify(list)); }
+  function saveList(list){ localStorage.setItem(LOCAL_KEY, JSON.stringify(list)); }
 
   async function postToServer(email){
   	try {
-  	 	const r = await fetch('/api/signup', { /* This will still fail on file://, but that's ok */
+  	 	const r = await fetch('/api/signup', {
   	 	 	method:'POST',
   	 	 	headers:{'Content-Type':'application/json'},
   	 	 	body: JSON.stringify({ email })
@@ -414,7 +391,7 @@ s function saveList(list){ localStorage.setItem(LOCAL_KEY, JSON.stringify(list))
   	saveList(list);
   	alert('Subscribed (local). A signup.txt file download will begin so you can save it to your repo.');
 
-section 	// create signup.txt download
+  	// create signup.txt download
   	const txt = list.map(x => \`\${x.email}\t\${x.ts}\`).join('\n');
   	const blob = new Blob([txt], { type: 'text/plain' });
   	const url = URL.createObjectURL(blob);
@@ -422,7 +399,7 @@ section 	// create signup.txt download
   	a.href = url;
   	a.download = 'signup.txt';
   	document.body.appendChild(a);
-  	a.click();
+a.click();
   	a.remove();
   	URL.revokeObjectURL(url);
 
