Change background images from .png to .jpg

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
   /* body.debug .slot{ background-color:rgba(255,0,0,0.3) !important; border:2px dashed rgba(255,255,255,0.5) !important; } */
 
   .pc{ display:block; }
-  .pc::before{ background-image:url('/pc/bg.png'); background-position:center top -8%; }
+  .pc::before{ background-image:url('/pc/bg.jpg'); background-position:center top -8%; }
   .pc::after { display:none; } /* Remove overlay */
 
   .mobile{ display:none; }
-  .mobile::before{ background-image:url('/mobile/bg.png'); }
+  .mobile::before{ background-image:url('/mobile/bg.jpg'); }
   .mobile::after { display:none; } /* Remove overlay */
 
   @media (max-width:800px){
