--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
-<title>Personal Site — Layered Scene (fixed, single-view)</title>
+<title>manas</title>
 <style>
   :root{
     --overlay-opacity: 0.6;
@@ -24,10 +24,7 @@
   }
 
   /* Scene */
-  .scene{ position:fixed; inset:0; width:100%; height:100%; min-height:100vh; overflow:hidden; isolation:isolate; background-color:#000; }
-  .scene::before, .scene::after{ content:""; position:absolute; inset:0; background-repeat:no-repeat; background-size:cover; background-position:center center; pointer-events:none; }
-  .scene::before{ z-index:0; }
-  .scene::after{ z-index:3; mix-blend-mode:var(--overlay-blend); opacity:var(--overlay-opacity); pointer-events:none; }
+  
 
   .lights{ position:absolute; inset:0; z-index:1 !important; pointer-events:none !important; opacity:0.05; display:flex; align-items:center; justify-content:center; }
   .lights img{ max-width:100%; max-height:100%; width:auto; height:auto; object-fit:contain; pointer-events:none !important; }
