--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   }
 
   /* Scene */
-  
+  .scene{ position:fixed; inset:0; width:100%; height:100%; min-height:100vh; overflow:hidden; isolation:isolate; background-color:#000; }
+  .scene::before, .scene::after{ content:""; position:absolute; inset:0; background-repeat:no-repeat; background-size:cover; background-position:center center; pointer-events:none; }
+  .scene::before{ z-index:0; }
 
   .lights{ position:absolute; inset:0; z-index:1 !important; pointer-events:none !important; opacity:0.05; display:flex; align-items:center; justify-content:center; }
   .lights img{ max-width:100%; max-height:100%; width:auto; height:auto; object-fit:contain; pointer-events:none !important; }
