Adjust PC slot styles for improved layout

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   
   /* PC slot positioning - positioned to align with numbered greenscreen areas */
   /* Increased size for better clickability */
-  .pc .slot-1{ top:10% !important; left:10% !important; width:35% !important; height:25% !important; } /* Greenscreen 1 */
-  .pc .slot-2{ top:3% !important; left:38% !important; width:60% !important; height:27% !important; } /* Greenscreen 2 - Post */
+  .pc .slot-1{ top:10% !important; left:10% !important; width:35% !important; height:25% !important; } /*Firadpatra*/
+  .pc .slot-2{ top:3% !important; left:38% !important; width:40% !important; height:27% !important; } /*Blogpost*/
   .pc .slot-3{ top:10% !important; right:6% !important; width:16% !important; height:10% !important; } /* Greenscreen 3 */
   .pc .slot-4{ top:40% !important; left:6% !important; width:16% !important; height:10% !important; } /* Greenscreen 4 */
   .pc .slot-5{ top:40% !important; right:6% !important; width:16% !important; height:10% !important; } /* Greenscreen 5 */
