Update slot positioning for PC layout in index.html

--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
   /* Increased size for better clickability */
   .pc .slot-1{ top:10% !important; left:10% !important; width:35% !important; height:25% !important; } /*Firadpatra*/
   .pc .slot-2{ top:3% !important; left:38% !important; width:30% !important; height:27% !important; } /*Blogpost*/
-  .pc .slot-5{ top:10% !important; right:20% !important; width:20% !important; height:25% !important; }/* Greenscreen 3 */
-  .pc .slot-6{ top:40% !important; left:6% !important; width:16% !important; height:10% !important; } /* Greenscreen 4 */
-  .pc .slot-7{ top:40% !important; right:6% !important; width:16% !important; height:10% !important; } /* Greenscreen 5 */
+  .pc .slot-3{ top:40% !important; right:20% !important; width:20% !important; height:25% !important; }/*YouTube*/
+  .pc .slot-4{ top:20% !important; right:20% !important; width:16% !important; height:10% !important; } /* Greenscreen 4 */
+  .pc .slot-5{ top:40% !important; right:40% !important; width:20% !important; height:40% !important; } /*Px1rt*/
+  .pc .slot-6{ top:10% !important; right:6% !important; width:16% !important; height:10% !important; }
   
   /* Mobile slot positioning */
   .mobile .slot-1{ top:8% !important; left:2% !important; width:18% !important; height:10% !important; }
