Adjust positioning of slots 5 and 6 in index.html

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   .pc .slot-2{ top:3% !important; left:38% !important; width:30% !important; height:27% !important; } /*Blogpost*/
   .pc .slot-3{ top:40% !important; right:20% !important; width:20% !important; height:25% !important; }/*YouTube*/
   .pc .slot-4{ top:20% !important; right:20% !important; width:16% !important; height:10% !important; } /* Greenscreen 4 */
-  .pc .slot-5{ top:40% !important; right:40% !important; width:20% !important; height:40% !important; } /*Px1rt*/
-  .pc .slot-6{ top:10% !important; right:6% !important; width:16% !important; height:10% !important; }
+  .pc .slot-5{ top:40% !important; left:40% !important; width:20% !important; height:40% !important; } /*Px1rt*/
+  .pc .slot-6{ top:30% !important; right:15% !important; width:10% !important; height:10% !important; }
   
   /* Mobile slot positioning */
   .mobile .slot-1{ top:8% !important; left:2% !important; width:18% !important; height:10% !important; }
