--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   .scene::before{ z-index:0; }
 
   .lights{ position:absolute; inset:0; z-index:1 !important; pointer-events:none !important; opacity:0.15; display:flex; align-items:center; justify-content:center; }
-  .lights img{ max-width:110%; max-height:120%; width:auto; 0px; object-fit:contain; pointer-events:none !important; }
+  .lights img{ max-width:110%; max-height:100%; width:auto; height:0px; object-fit:contain; pointer-events:none !important; }
 
   /* Clickable areas over greenscreen positions - no images, just invisible links */
   .slot{ 
