--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
   .mobile .slot-4{ top:45% !important; left:2% !important; width:18% !important; height:10% !important; }
   .mobile .slot-5{ top:45% !important; right:2% !important; width:18% !important; height:10% !important; }
   
+  
   /* Debug mode - uncomment to see clickable areas during development */
   /* body.debug .slot{ background-color:rgba(255,0,0,0.3) !important; border:2px dashed rgba(255,255,255,0.5) !important; } */
 
@@ -251,6 +252,11 @@
   <div class="slot slot-5" data-slot="#5">
     <a href="#" aria-label="Link 5" title="Link 5"></a>
   </div>
+
+ <div class="slot slot-6" data-slot="#6">
+    <a href="#" aria-label="Link 6" title="Link 6"></a>
+  </div>
+  
 </section>
 
 <!-- Mobile scene -->
@@ -278,6 +284,10 @@
 
   <div class="slot slot-5" data-slot="#5">
     <a href="#" aria-label="Link 5" title="Link 5"></a>
+  </div>
+
+  <div class="slot slot-6" data-slot="#6">
+    <a href="#" aria-label="Link 6" title="Link 6"></a>
   </div>
 </section>
 
