--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
   .mobile .slot-1{ top:33% !important; left:2% !important; width:20% !important; height:5% !important; } /*Firadpatra*/
   .mobile .slot-2{ top:23% !important; left:33% !important; width:30% !important; height:20% !important; } /*Blogpost*/
   .mobile .slot-3{ top:33% !important; right:2% !important; width:30% !important; height:10% !important; } /*YouTube*/
-  .mobile .slot-4{ top:48% !important; left:2% !important; width:18% !important; height:5% !important; }  /* Greenscreen 4 */
-  .mobile .slot-5{ top:45% !important; right:2% !important; width:18% !important; height:10% !important; } /*Px1rt*/
+  .mobile .slot-4{ top:48% !important; left:10% !important; width:10% !important; height:5% !important; }  /* Greenscreen 4 */
+  .mobile .slot-5{ top:45% !important; right:2% !important; width:18% !important; height:10% !important; } /*Px1rt*/ 
+  .mobile .slot-5{ top:33% !important; right:1% !important; width:8% !important; height:10% !important; } /*download*/
   
   
   /* Debug mode - uncomment to see clickable areas during development */
