--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
   /* Increased size for better clickability */
   .pc .slot-1{ top:10% !important; left:10% !important; width:35% !important; height:25% !important; } /*Firadpatra*/
   .pc .slot-2{ top:3% !important; left:38% !important; width:30% !important; height:27% !important; } /*Blogpost*/
-  .pc .slot-3{ top:40% !important; right:20% !important; width:20% !important; height:25% !important; }/*YouTube*/
-  .pc .slot-4{ top:20% !important; right:20% !important; width:16% !important; height:10% !important; } /* Greenscreen 4 */
-  .pc .slot-5{ top:40% !important; left:20% !important; width:20% !important; height:40% !important; } /*Px1rt*/
-  .pc .slot-6{ top:25% !important; right:15% !important; width:10% !important; height:10% !important; }
+  .pc .slot-3{ top:40% !important; right:20% !important; width:20% !important; height:25% !important; }/*px1rt*/
+  .pc .slot-4{ top:20% !important; right:20% !important; width:16% !important; height:10% !important; } /* Greenscreen 4 /*
+  .pc .slot-5{ top:40% !important; left:20% !important; width:20% !important; height:40% !important; } /*YouTube*/
+  .pc .slot-6{ top:25% !important; right:15% !important; width:10% !important; height:10% !important; } /*Px1rt*/
   
   /* Mobile slot positioning */
-  .mobile .slot-1{ top:33% !important; left:2% !important; width:20% !important; height:5% !important; } /*Firadpatra*/
-  .mobile .slot-2{ top:23% !important; left:33% !important; width:30% !important; height:20% !important; } /*Blogpost*/
-  .mobile .slot-3{ top:33% !important; right:2% !important; width:30% !important; height:10% !important; } /*YouTube*/
-  .mobile .slot-4{ top:48% !important; left:10% !important; width:10% !important; height:5% !important; }  /* Greenscreen 4 */
+  .mobile .slot-1{ top:33% !important; left:2% !important; width:25% !important; height:10% !important; } /*Firadpatra*/
+  .mobile .slot-2{ top:30% !important; left:26% !important; width:40% !important; height:15% !important; } /*Blogpost*/
+  .mobile .slot-3{ top:38% !important; right:10% !important; width:20% !important; height:10% !important; } /*ktm*/
+  .mobile .slot-4{ top:43% !important; left:1% !important; width:15% !important; height:15% !important; }  /* YouTube */
   .mobile .slot-5{ top:45% !important; right:2% !important; width:18% !important; height:10% !important; } /*Px1rt*/ 
-  .mobile .slot-5{ top:33% !important; right:1% !important; width:8% !important; height:10% !important; } /*download*/
+  .mobile .slot-6{ top:38% !important; right:0% !important; width:10% !important; height:10% !important; } /*download*/
   
   
   /* Debug mode - uncomment to see clickable areas during development */
