--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   </div>
 
   <div class="slot slot-3" data-slot="#3">
-    <a href="#" aria-label="Link 3" title="Link 3"></a>
+    <a href="https://px1rt.net" aria-label="Px1rt.net" title="Px1.rt"></a>
   </div>
 
   <div class="slot slot-4" data-slot="#4">
@@ -251,7 +251,7 @@
   </div>
 
   <div class="slot slot-5" data-slot="#5">
-    <a href="#" aria-label="Link 5" title="Link 5"></a>
+    <a href="https://youtube.com/@manas.mp4?si=ucXaTbTFtP-lEuC8" aria-label="YouTube" title="YouTube"></a>
   </div>
 
  <div class="slot slot-6" data-slot="#6">
@@ -276,11 +276,11 @@
   </div>
 
   <div class="slot slot-3" data-slot="#3">
-    <a href="#" aria-label="Link 3" title="Link 3"></a>
+    <a href="https://px1rt.net" aria-label="Px1.rt" title="Px1rt.net"></a>
   </div>
 
   <div class="slot slot-4" data-slot="#4">
-    <a href="#" aria-label="Link 4" title="Link 4"></a>
+    <a href="https://youtube.com/@manas.mp4?si=ucXaTbTFtP-lEuC8" aria-label="YouTube" title="YouTube"></a>
   </div>
 
   <div class="slot slot-5" data-slot="#5">
