--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
   
   /* PC slot positioning - positioned to align with numbered greenscreen areas */
   /* Increased size for better clickability */
-  .pc .slot-1{ top:10% !important; left:10% !important; width:35% !important; height:25% !important; } /*Firadpatra*/
-  .pc .slot-2{ top:3% !important; left:38% !important; width:30% !important; height:27% !important; } /*Blogpost*/
-  .pc .slot-3{ top:40% !important; right:20% !important; width:20% !important; height:25% !important; }/*px1rt*/
-  .pc .slot-4{ top:20% !important; right:20% !important; width:16% !important; height:10% !important; } /* Greenscreen 4 /*
+  .pc .slot-1{ top:10% !important; left:15% !important; width:20% !important; height:25% !important; } /*Firadpatra*/
+  .pc .slot-2{ top:3% !important; left:38% !important; width:35% !important; height:27% !important; } /*Blogpost*/
+  .pc .slot-3{ top:40% !important; right:20% !important; width:10% !important; height:25% !important; }/*px1rt*/
+  .pc .slot-4{ top:20% !important; right:17% !important; width:10% !important; height:15% !important; } /*buy*/
   .pc .slot-5{ top:40% !important; left:20% !important; width:20% !important; height:40% !important; } /*YouTube*/
-  .pc .slot-6{ top:25% !important; right:15% !important; width:10% !important; height:10% !important; } /*Px1rt*/
+  .pc .slot-6{ top:30% !important; right:12% !important; width:5% !important; height:10% !important; } /**/
   
   /* Mobile slot positioning */
   .mobile .slot-1{ top:33% !important; left:2% !important; width:25% !important; height:10% !important; } /*Firadpatra*/
@@ -235,7 +235,7 @@
 
   <!-- Clickable areas over greenscreen positions -->
   <div class="slot slot-1" data-slot="#1">
-    <a href="#" aria-label="Link 1" title="Link 1"></a>
+    <a href="https://firadpatra.com" aria-label="Link 1" title="Link 1"></a>
   </div>
 
   <div class="slot slot-2" data-slot="#2">
